# editor

./: editor.cabal  flake.nix
app/: Client.hs  Main.hs  Server.hs
client/Editor/: Client.hs
client/Editor/Client/: Network.hs
client/Editor/Client/Network/: Channel.hs  Unix.hs
lib/Editor/: Buffer.hs  Diff.hs  Message.hs  Network.hs
server/Editor/: Server.hs
server/Editor/Server/: Network.hs
server/Editor/Server/Network/: Channel.hs  Unix.hs
